@@ -9,6 +9,7 @@ Engine features:
 * Scenes in cutscenes can now pause indefinitely by using "pause=-1".
 * Added a "lifeform" flag to enemy stats. Setting it to false will display "Destroyed" instead of "Dead" when their HP reaches 0.
 * Mod descriptions can now be translated with "description_locale".
+* Added "enable_overlay", "start_at_bottom", and "overlay_at_bottom" to HUD log configuration.
 
 Engine fixes:
 
